# app/Http/Controllers/ExampleController.php
@@ -9,37 +9,23 @@ class ExampleController extends Controller
      *
      * @return void
      */
-    /**
-     * @OA\Info(
-     *   title="Example API",
-     *   version="1.0",
-     *   @OA\Contact(
-     *     email="support@example.com",
-     *     name="Support Team"
-     *   )
-     * )
-     */
     public function __construct()
     {
         //
     }
-
-    /**
-     * @OA\Get(
-     *     path="/sample",
-     *     @OA\Response(
-     *         response="200",
-     *         description="Returns some sample category things",
-     *         @OA\JsonContent()
-     *     ),
-     *     @OA\Response(
-     *         response="400",
-     *         description="Error: Bad request. When required parameters were not supplied.",
-     *     ),
-     * )
-     */
+    
     public function index()
     {
         return 'works!';
+    }
+
+    public function show($id)
+    {
+        return ['yourId' => (int)$id];
+    }
+
+    public function showOp($id = null)
+    {
+        return ['yourId' => $id ? 'not null' : 'empty'];
     }
 }
